syntax = "proto3";

option go_package = "github.com/jrapoport/gothic/hosts/rpc/admin/codes;codes";

package codes;

import "google/protobuf/duration.proto";
import "google/protobuf/empty.proto";

service Codes {
  rpc CreateSignupCodes (CreateSignupCodesRequest) returns (CreateSignupCodesResponse) {
  }

  rpc CheckSignupCode (CheckSignupCodeRequest) returns (CheckSignupCodeResponse) {
  }

  rpc VoidSignupCode (VoidSignupCodeRequest) returns (google.protobuf.Empty) {
  }
}

message CreateSignupCodesRequest {
  int64 uses = 1;
  int64 count = 2;
}

message CreateSignupCodesResponse {
  repeated string codes = 1;
}

message CheckSignupCodeRequest {
  string code = 1;
}

enum CodeFormat {
  Invite = 0;
  PIN = 1;
}

enum CodeUsage {
  Infinite = 0;
  Single = 1;
  Multi = 2;
  Timed = 3;
}

message CheckSignupCodeResponse {
  bool usable = 1;
  string code = 2;
  CodeFormat code_format = 3;
  CodeUsage code_type = 4;
  google.protobuf.Duration expiration = 5;
  string user_id = 6;
}

message VoidSignupCodeRequest {
  string code = 1;
}